welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:13: error: type mismatch;
 found   : Int
 required: Boolean
	if (T(0)==10||T(1)==10||T(2)) {
                                 ^